<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_material_dark"
    android:gravity="center"
    tools:context="com.avigezerit.callssmslogs.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:divider="@drawable/space_vertical"
        android:showDividers="middle">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_white" />

        <TextView
            android:id="@+id/TitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ExpTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TitleTV"
            android:text="@string/app_brieff_first_time_user"
            android:textAlignment="center"
            android:textSize="17dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/space_horizontal"
            android:showDividers="middle">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Contacts"
                android:id="@+id/contactPermBtn"
                android:layout_weight=".33"
                android:background="@color/button_material_dark" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Calls"
                android:id="@+id/callsPermBtn"
                android:layout_weight=".33"
                android:background="@color/button_material_dark" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Sms"
                android:id="@+id/smsPermBtn"
                android:layout_weight=".33"
                android:background="@color/button_material_dark" />
        </LinearLayout>

        <Button
            android:id="@+id/pickContactBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ExpTV"
            android:background="@color/colorPrimaryTransparent"
            android:text="@string/pick_contact_btn" />
    </LinearLayout>

</RelativeLayout>
